data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_435.wast
;; 6. **Test Description**: Design a loop with improperly typed return values that does not match the loop's block type, making the mismatched path contain an `unreachable`.    - **Constraint**: Validates the function type handling and consistency of return types with block types.    - **Unreachable Code Execution**: Mismatched return types must trap before they lead to paths containing `unreachable`.

(assert_invalid
  (module
    (func $mismatched-block-return 
      (loop (result f32)
        i32.const 0
        br 0
        unreachable
      )
    )
  )
  "type mismatch"
)